--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "zustand": "^5.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.16",
     "@tanstack/eslint-plugin-query": "^5.62.11",
     "@tanstack/react-query-devtools": "^5.62.11",
     "@types/js-cookie": "^3.0.6",
@@ -54,7 +55,7 @@
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.16",
     "typescript": "^5.7.2"
   }
 }
