update: shared constants

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
 # API Configuration
 NEXT_PUBLIC_API_URL=http://localhost:3000/api/v1
-NEXT_PUBLIC_WS_URL=http://localhost:3000
-
-# Feature Flags
-NEXT_PUBLIC_ENABLE_DEVTOOLS=true
-NEXT_PUBLIC_ENABLE_MSW=false
+NEXT_PUBLIC_WS_URL=ws://localhost:3000
 
 # App Configuration
-NEXT_PUBLIC_APP_NAME=Tryout System
+NEXT_PUBLIC_APP_ENV=development
+NEXT_PUBLIC_ENABLE_DEVTOOLS=true
+
+# Feature Flags (for future use)
+NEXT_PUBLIC_ENABLE_MSW=false
 NEXT_PUBLIC_MAX_FILE_SIZE=5242880
 NEXT_PUBLIC_ALLOWED_IMAGE_TYPES=image/jpeg,image/png,image/webp
 
